--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "webpack": "^3.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack"
   },
   "author": "",
   "license": "ISC"
